--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,45 @@
 @import "~antd/dist/antd.css";
 
+.fixedDiv {
+  width: 150px;
+  display: flex;
+  /* justify-content: end;
+  align-items: center; */
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  z-index: 500;
+  cursor: pointer;
+}
+.color {
+  cursor: pointer;
+}
+.card {
+  font-size: 15px;
+  transition: 0.2s;
+  padding: 5px;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background: whitesmoke;
+  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.card:hover {
+  transform: scale(1.5);
+  background: white;
+}
 .social {
   position: fixed;
   padding: 5px 5px;
   margin: 0px;
-  cursor: pointer;
   transition: 0.3s;
   font-size: 20px;
   z-index: 500;
   border-radius: 8px;
-  left: -15.5%;
+  left: -13rem;
   top: 30%;
   background: whitesmoke;
 }
@@ -21,12 +51,12 @@
   z-index: 200;
   list-style-type: none;
 }
-.social ul li  {
+.social ul li {
   display: flex;
   padding: 5px;
   justify-content: space-between;
 }
-.social ul li svg{
+.social ul li svg {
   margin-left: 5px;
 }
 .social ul li {
@@ -36,37 +66,16 @@
   transform: scale(1.1);
 }
 .social:hover {
-  left: 0px;
+  left: 0rem;
 }
 
-.card {
-  font-size: 15px;
-  transition: 0.2s;
-  padding: 5px;
-  cursor: pointer;
-  width: 55px;
-  height: 55px;
-  position: fixed;
-  border-radius: 50%;
-  background: whitesmoke;
-  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.5);
-  right: 100px;
-  bottom: 50px;
-  z-index: 500;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.card:hover {
-  transform: scale(1.5);
-  background: white;
-}
 .container {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
+
 @media (min-width: 1600px) {
   .container {
     max-width: 1600px;
@@ -93,8 +102,18 @@
   }
 }
 .OrderItem {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: wheat;
   padding: 10px 0px;
+}
+.box .ant-image-mask,
+.ant-image-img {
+  margin-right: 10px;
+}
+.ant-image-img {
+  margin-right: 10px;
 }
 #Navbar {
   width: 100%;
@@ -108,6 +127,7 @@
 #Navbar li {
   float: left;
 }
+
 #Navbar li a {
   display: block;
   color: white;
@@ -121,4 +141,13 @@
 #Navbar li:last-child {
   float: right;
   margin-right: 30px;
+}
+@media screen and (max-width: 600px) {
+  #Navbar li {
+    float: none;
+  }
+  #Navbar li:last-child {
+    float: none;
+    margin-right: 0px;
+  }
 }
